# vector-explore

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: interfaces.md
src/vector_explore/: app.py  batching.py  chunking.py  cli.py  config.py  download_gutenberg.py  embedding.py  indexing.py  io_utils.py  paging.py  paths.py  preprocess.py  query.py  runs_inspect.py  ui.py  vector_to_text.py  wizard.py
src/vector_explore/chunkers/: __init__.py  fixed.py  overlap.py  semantic.py  sentences.py
src/vector_explore/embeddings/: __init__.py  base.py  cloud_embed.py  ollama_embed.py  st_embed.py
src/vector_explore/llm/: ollama_generate.py  prompts.py
src/vector_explore/stores/: __init__.py  base.py  lancedb_store.py  pinecone_store.py  qdrant_store.py
tests/: test_batching_and_st_cache.py  test_chunkers.py  test_cli_adapter.py  test_ollama_generate.py  test_paging.py  test_paths_cache.py  test_paths_new_layout.py  test_query_logging.py  test_runs_inspect.py  test_wizard_loop.py
